--- a/frontend/src/styles/Place.scss
+++ b/frontend/src/styles/Place.scss
@@ -2,5 +2,26 @@
 @import "_mixins";
 
 .one-place {
-
+    width: 250px;
+    padding: 10px;
+    border: 2px solid #000;
+    border-radius: $radius;
+    margin-bottom: 40px;
+    @include shadow;
+    &:hover {
+        @include shadowHover;
+    }
+    &_image {
+        width: 100%;
+        height: 200px;
+        margin-bottom: 20px;
+        cursor: pointer;
+    }
+    &_title {
+        font-size: 16px;
+        font-weight: bold;
+        color: $purple;
+        text-decoration: underline;
+        cursor: pointer;
+    }
 }
