--- a/frontend/src/styles/OnePlace.scss
+++ b/frontend/src/styles/OnePlace.scss
@@ -3,7 +3,9 @@
         display: flex;
         flex-flow: row nowrap;
         justify-content: space-between;
-        margin-bottom: 30px;
+        margin-bottom: 20px;
+        padding-bottom: 20px;
+        border-bottom: 1px solid #000;
         &_left-side {
             flex-grow: 1;
             &_title {
