--- a/frontend/src/styles/Place.scss
+++ b/frontend/src/styles/Place.scss
@@ -23,5 +23,20 @@
         color: $purple;
         text-decoration: underline;
         cursor: pointer;
+        margin-bottom: 10px;
+    }
+    &_rating {
+        margin-bottom: 10px;
+    }
+    &_photos {
+        font-weight: bold;
+        font-size: 20px;
+        display: flex;
+        flex-flow: row nowrap;
+        align-items: center;
+        span {
+            margin-left: 10px;
+            font-size: 14px;
+        }
     }
 }
