--- a/frontend/src/styles/Gallery.scss
+++ b/frontend/src/styles/Gallery.scss
@@ -5,12 +5,23 @@
     &_list {
         display: flex;
         flex-flow: row wrap;
-        justify-content: space-between;
+        justify-content: flex-start;
         &_photo {
             width: 200px;
             height: 200px;
             border: 1px solid #000;
-            margin: 10px 0;
+            margin: 10px 40px 10px 0;
+            position: relative;
+            &:last-child {
+                margin-right: 0;
+            }
+            &_delete.btn {
+                position: absolute;
+                top: 10px;
+                right: 10px;
+                height: auto;
+                padding: 10px;
+            }
         }
     }
 }
