--- a/frontend/src/styles/OnePlace.scss
+++ b/frontend/src/styles/OnePlace.scss
@@ -1,3 +1,6 @@
+@import "_variables";
+@import "_mixins";
+
 .one-place-page {
     &_top {
         display: flex;
@@ -26,5 +29,12 @@
                 height: auto;
             }
         }
+    }
+    &_message {
+        color: $red;
+        text-align: center;
+        font-size: 30px;
+        font-weight: bold;
+        padding: 20px;
     }
 }
