--- a/frontend/src/styles/AddPlace.scss
+++ b/frontend/src/styles/AddPlace.scss
@@ -21,5 +21,20 @@
     }
     &_form {
         flex-grow: 1;
+        &_checkbox {
+            display: flex;
+            flex-flow: nowrap row;
+            align-items: center;
+            justify-content: flex-start;
+            label {
+                margin: 0;
+                font-size: 16px;
+            }
+            input {
+                width: 20px;
+                height: 20px;
+                display: block;
+            }
+        }
     }
 }
